--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
                 <input type="text" name="name" placeholder="Nom" required>
                 <input type="text" name="insta" placeholder="Instagram" required>
                 <input type="text" name="link" placeholder="Lien vers ton son" required>
+                <div>
+                    <input type="radio" id="html" name="Categorie" value="ligue">
+                    <label for="html">Prod ligue</label>
+                    <input type="radio" id="css" name="Categorie" value="ecouteprod">
+                    <label for="css">Ecoute de prods</label><br>
+                </div>
                 <input type="text" name="message" placeholder="Ton message">
                 <button class="button" type="submit" name="submit" value="Submit">ENVOYER</button>
             </form>
